gitops/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanekapp
spec:
  selector:
    matchLabels:
      app: vanekapp
  template:
    metadata:
      labels:
        app: vanekapp
    spec:
      containers:
      - name: vanekapp
        image: vanekcr.azurecr.io/vanekapp
        resources:
          limits:            
            memory: "200Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
