gitops/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vanekapp
spec:
  type: LoadBalancer 
  selector:
    app: vanekapp
  ports:
  - port: 80
    targetPort: 3000
