gitops/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vanekapp
  labels:
    name: vanekapp
spec:
  rules:
  - host: k8s-vanek.my
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vanekapp
            port: 
              number: 80
